// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchableTree should expand the nodes that match search value 1`] = `
<DocumentFragment>
  <span
    class="ant-input-search ant-input-affix-wrapper"
    style="margin-bottom: 8px;"
  >
    <input
      class="ant-input"
      data-testid="search-input"
      type="text"
      value="1-0"
    />
    <span
      class="ant-input-suffix"
    >
      <span
        aria-label="search"
        class="anticon anticon-search ant-input-search-icon"
        role="img"
        tabindex="-1"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="search"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
          />
        </svg>
      </span>
    </span>
  </span>
  <div
    style="overflow: auto;"
  >
    <div
      class="ant-tree ant-tree-icon-hide"
    >
      <div
        role="tree"
      >
        <input
          style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
          tabindex="0"
          value=""
        />
      </div>
      <div
        class="ant-tree-list"
        style="position: relative;"
      >
        <div
          class="ant-tree-list-holder"
        >
          <div>
            <div
              class="ant-tree-list-holder-inner"
              style="display: flex; flex-direction: column;"
            >
              <div
                class="ant-tree-treenode ant-tree-treenode-switcher-open"
              >
                <span
                  class="ant-tree-switcher ant-tree-switcher_open"
                >
                  <span
                    aria-label="caret-down"
                    class="anticon anticon-caret-down ant-tree-switcher-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="caret-down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                    >
                      <path
                        d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                  title="0"
                >
                  <span
                    class="ant-tree-title"
                  >
                    0
                  </span>
                </span>
              </div>
              <div
                class="ant-tree-treenode ant-tree-treenode-switcher-close"
              >
                <span
                  aria-hidden="true"
                  class="ant-tree-indent"
                >
                  <span
                    class="ant-tree-indent-unit ant-tree-indent-unit-start"
                  />
                </span>
                <span
                  class="ant-tree-switcher ant-tree-switcher-noop"
                />
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                  title="0-0"
                >
                  <span
                    class="ant-tree-title"
                  >
                    0-0
                  </span>
                </span>
              </div>
              <div
                class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
              >
                <span
                  aria-hidden="true"
                  class="ant-tree-indent"
                >
                  <span
                    class="ant-tree-indent-unit ant-tree-indent-unit-end"
                  />
                </span>
                <span
                  class="ant-tree-switcher ant-tree-switcher_open"
                >
                  <span
                    aria-label="caret-down"
                    class="anticon anticon-caret-down ant-tree-switcher-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="caret-down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                    >
                      <path
                        d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                  title="0-1"
                >
                  <span
                    class="ant-tree-title"
                  >
                    0-1
                  </span>
                </span>
              </div>
              <div
                class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
              >
                <span
                  aria-hidden="true"
                  class="ant-tree-indent"
                >
                  <span
                    class="ant-tree-indent-unit ant-tree-indent-unit-end"
                  />
                  <span
                    class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                  />
                </span>
                <span
                  class="ant-tree-switcher ant-tree-switcher_open"
                >
                  <span
                    aria-label="caret-down"
                    class="anticon anticon-caret-down ant-tree-switcher-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="caret-down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                    >
                      <path
                        d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                  title="0-1-0"
                >
                  <span
                    class="ant-tree-title"
                  >
                    0-1-0
                  </span>
                </span>
              </div>
              <div
                class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
              >
                <span
                  aria-hidden="true"
                  class="ant-tree-indent"
                >
                  <span
                    class="ant-tree-indent-unit ant-tree-indent-unit-end"
                  />
                  <span
                    class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                  />
                  <span
                    class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end"
                  />
                </span>
                <span
                  class="ant-tree-switcher ant-tree-switcher-noop"
                />
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                  title=""
                >
                  <span
                    class="ant-tree-title"
                  >
                    <span>
                      0-
                      <span
                        style="color: rgb(0, 113, 235); background-color: rgb(230, 247, 255);"
                      >
                        1-0
                      </span>
                      -1
                    </span>
                  </span>
                </span>
              </div>
              <div
                class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
              >
                <span
                  class="ant-tree-switcher ant-tree-switcher_open"
                >
                  <span
                    aria-label="caret-down"
                    class="anticon anticon-caret-down ant-tree-switcher-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="caret-down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                    >
                      <path
                        d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-open"
                  title="1"
                >
                  <span
                    class="ant-tree-title"
                  >
                    1
                  </span>
                </span>
              </div>
              <div
                class="ant-tree-treenode ant-tree-treenode-switcher-open ant-tree-treenode-leaf-last"
              >
                <span
                  aria-hidden="true"
                  class="ant-tree-indent"
                >
                  <span
                    class="ant-tree-indent-unit ant-tree-indent-unit-start ant-tree-indent-unit-end ant-tree-indent-unit-end-first-level"
                  />
                </span>
                <span
                  class="ant-tree-switcher ant-tree-switcher-noop"
                />
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-normal"
                  title=""
                >
                  <span
                    class="ant-tree-title"
                  >
                    <span>
                      <span
                        style="color: rgb(0, 113, 235); background-color: rgb(230, 247, 255);"
                      >
                        1-0
                      </span>
                    </span>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SearchableTree should work 1`] = `
<DocumentFragment>
  <div
    style="overflow: auto;"
  >
    <div
      class="ant-tree ant-tree-icon-hide"
    >
      <div
        role="tree"
      >
        <input
          style="width: 0px; height: 0px; display: flex; overflow: hidden; opacity: 0; border: 0px; padding: 0px; margin: 0px;"
          tabindex="0"
          value=""
        />
      </div>
      <div
        class="ant-tree-list"
        style="position: relative;"
      >
        <div
          class="ant-tree-list-holder"
        >
          <div>
            <div
              class="ant-tree-list-holder-inner"
              style="display: flex; flex-direction: column;"
            >
              <div
                class="ant-tree-treenode ant-tree-treenode-switcher-close"
              >
                <span
                  class="ant-tree-switcher ant-tree-switcher_close"
                >
                  <span
                    aria-label="caret-down"
                    class="anticon anticon-caret-down ant-tree-switcher-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="caret-down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                    >
                      <path
                        d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
                  title="0"
                >
                  <span
                    class="ant-tree-title"
                  >
                    0
                  </span>
                </span>
              </div>
              <div
                class="ant-tree-treenode ant-tree-treenode-switcher-close ant-tree-treenode-leaf-last"
              >
                <span
                  class="ant-tree-switcher ant-tree-switcher_close"
                >
                  <span
                    aria-label="caret-down"
                    class="anticon anticon-caret-down ant-tree-switcher-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="caret-down"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                    >
                      <path
                        d="M840.4 300H183.6c-19.7 0-30.7 20.8-18.5 35l328.4 380.8c9.4 10.9 27.5 10.9 37 0L858.9 335c12.2-14.2 1.2-35-18.5-35z"
                      />
                    </svg>
                  </span>
                </span>
                <span
                  class="ant-tree-node-content-wrapper ant-tree-node-content-wrapper-close"
                  title="1"
                >
                  <span
                    class="ant-tree-title"
                  >
                    1
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
